Fixed table overflowing issue in review page.

--- a/xCheckStudio/Webviewer/src/css/reviewPage.css
+++ b/xCheckStudio/Webviewer/src/css/reviewPage.css
@@ -185,21 +185,39 @@ button + button {
   width: 400px;
   min-width: 15%;
   max-width: 85%;
-  display: grid;
-  grid-template-rows: auto 40px;
-  grid-row-gap: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .showDetailInfo{
   grid-template-rows: calc(50% - 5px) auto;
 }
 
-.openInfoArea{
-  grid-template-rows: auto 300px;
+.tablesArea{
+  position: relative;
+  flex-grow: 1;
+  background-color: black;
+  margin-bottom: 10px;
 }
 
-.tablesArea{
-  background-color: black;
+.tempContainer{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  overflow: auto;
+
+}
+
+table {
+  width: 100%;
+}
+
+tr {
+  width: 100%;
+  height: 200px;
+  background-color: red;
 }
 
 .infoArea{
@@ -207,12 +225,18 @@ button + button {
   position: relative;
 }
 
+/* SEND */
+.openInfoArea{
+  height: 50%;
+}
+
 .infoAreaHeader {
+  width: 100%;
+  box-sizing: border-box;
+  height: 40px;
   display: flex;
-  position: absolute;
-  left: 5px;
-  top: 10px;
-  right: 5px;
+  align-items: center;
+  position: relative;
 }
 
 .infoAreaHeader img:first-child {
@@ -223,8 +247,7 @@ button + button {
 }
 .infoAreaHeader .arrow {
   position: absolute;
-  top: 3px;
-  right: 0;
+  right: 5px;
 }
 
 .invert {
